--- a/de12/test.html
+++ b/de12/test.html
@@ -2,8 +2,9 @@
 <html lang="jp">
 <head>
     <!-- ⑥↓タイトルを変えてみよう -->
-    <title>〇〇のテストページ</title>
+    <title>天野のテストページ</title>
     <!-- ⑤スタイルシートの設定をしよう -->
+    <link rel="stylesheet" href="./css/style.css">
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
@@ -11,13 +12,29 @@
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
          <!-- ①↓に文字を書いてみよう -->
-
+<div>これはテストです<br>
+ああああ</div>
          <!-- ②↓に画像（imagesフォルダにあるtest.png）を挿入してみよう -->
-
+<img src="./images/testimage.png" width="50%"><br>
+<img src="../images/0_XBlogo.png" width="30%"><br>
+<img src="../digi_fab/images/xbp.ico" width="30%">
          <!-- ③↓に箇条書きをしてみよう -->
-
+<ol>
+    <li>100</li>
+    <li>200</li>
+</ol>
+<ul>
+    <li>110000</li>
+    <li>0</li>
+</ul>
          <!-- ④↓に外部リンクを作ってみよう -->
-
+<a href="./index.html">デザイン演習Ⅰ・Ⅱトップページ</a><br>
+<a href="../index.html">XBPトップページ</a><br>
+<a href="https://www.yahoo.co.jp/" target="_blank">Yahoo</a><br>
+<a href="./files/test.pdf" target="_blank">pdfファイル</a>
+<div class="video">(引用)YouTube Baby-On Top
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/mD1f5VXTNIQ?si=2SMAFwWZm_6PsVSu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
     </div>
 
 </body>
