--- a/de12/index.html
+++ b/de12/index.html
@@ -18,7 +18,9 @@
             <li><a href="./test.html" target="_blank">テストページ</a></li>
         </ol>
         <h2>演習ノート一覧</h2>
-
+        <ul>
+            <li><a href="../de12/1.html">第１回</a></li>
+        </ul>
 
 
     
