--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -12,8 +12,9 @@
     </logotohome>
     <h1>デジタルファブリケーション</h1>
     <h2>演習ノート一覧</h2>
-
-
+    <ul>
+        <li><a href="../digi_fab/test.html">第１回</a></li>
+    </ul>
 
 
     
