--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -13,7 +13,7 @@
     <h1>デジタルファブリケーション</h1>
     <h2>演習ノート一覧</h2>
     <ul>
-        <li><a href="../digi_fab/test.html">第１回</a></li>
+        <li><a href="../digi_fab/1.html">第１回</a></li>
     </ul>
 
 
