--- a/de12/index.html
+++ b/de12/index.html
@@ -21,6 +21,7 @@
         <ul>
             <li><a href="../de12/1.html">第１回</a></li>
             <li><a href="../de12/2.html">第２回</a></li>
+            <li><a href="../de12/3.html">第３回</a></li>
         </ul>
 
 
