--- a/de12/index.html
+++ b/de12/index.html
@@ -22,6 +22,7 @@
             <li><a href="../de12/1.html">第１回</a></li>
             <li><a href="../de12/2.html">第２回</a></li>
             <li><a href="../de12/3.html">第３回</a></li>
+            <li><a href="../de12/4.html">第４回</a></li>
         </ul>
 
 
