--- a/de12/6.html
+++ b/de12/6.html
@@ -28,13 +28,13 @@
     (あくまで自論)<br>
     <li><h4>特徴から必要とされる駅やアクセス</h4></li>
     撮影で全国を回るとすると新幹線や電車が多く通っているすなわちアクセスが良いところが考えられる<br>
-    pythonで神奈川県のアクセスが良いところを調べると<br>
-    <br>
-    調査の結果麦わら帽子がいたりしたことから、季節や天気も帽子をかぶるのに影響することが分かった。
+    pythonで路線別の平均徒歩を調べるとこのようになった<br>
+    <img src="./images/スクリーンショット 2023-11-14 133615.png" width="60%"><br>
+    調査の結果京王線は特に駅までにかかる時間が多いとわかった<br>
 </ol>
 <h3>～考察～</h3>
-平日の14時～15時の間の帽子をかぶっている人は年配の人が多く見られる傾向が<br>
-あったことから、キャップをかぶってそうな大学生が授業などであまり現れなかったのではないかと考える。
+京王線やモノレールは特に平均徒歩がかかるが<br>
+他の路線はあまり大差がなっかたのでその中の東海道新幹線などが良いのではないかと考える。
 </div>
 
 </body>
