--- a/de12/index.html
+++ b/de12/index.html
@@ -24,6 +24,7 @@
             <li><a href="../de12/3.html">第３回</a></li>
             <li><a href="../de12/4.html">第４回</a></li>
             <li><a href="../de12/5.html">第５回</a></li>
+            <li><a href="../de12/6.html">第６回</a></li>
         </ul>
 
 
