--- a/de12/6.html
+++ b/de12/6.html
@@ -11,6 +11,8 @@
     <center><h1>デザイン演習第6回</h1></center>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
 <div>
+<h3>～班の発表PDF～</h3>
+<a href="./files/SUUMO3班.pdf" target="_blank">pdfファイル</a>
          <!-- ①↓に文字を書いてみよう -->
 <center><h2>神奈川県内でパチプロ系YouTuberが住むとしたらどこに住むか</h2></center>
 <h3>～調査方法～</h3>
