--- a/de12/index.html
+++ b/de12/index.html
@@ -25,10 +25,9 @@
             <li><a href="../de12/4.html">第４回</a></li>
             <li><a href="../de12/5.html">第５回</a></li>
             <li><a href="../de12/6.html">第６回</a></li>
+            <li><a href="../de12/7.html">第７回</a></li>
         </ul>
 
-
-    
 <br>
 <br>
 
