--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -15,6 +15,7 @@
     <ul>
         <li><a href="../digi_fab/1.html">第１回</a></li>
         <li><a href="../digi_fab/2.html">第２回</a></li>
+        <li><a href="../digi_fab/3.html">第３回</a></li>
     </ul>
 
 
