--- a/de12/index.html
+++ b/de12/index.html
@@ -26,6 +26,7 @@
             <li><a href="../de12/5.html">第５回</a></li>
             <li><a href="../de12/6.html">第６回</a></li>
             <li><a href="../de12/7.html">第７回</a></li>
+            <li><a href="../de12/8.html">第８回</a></li>
         </ul>
 
 <br>
