--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -16,6 +16,7 @@
         <li><a href="../digi_fab/1.html">第１回</a></li>
         <li><a href="../digi_fab/2.html">第２回</a></li>
         <li><a href="../digi_fab/3.html">第３回</a></li>
+        <li><a href="../digi_fab/5.html">観察課題</a></li>
         <li><a href="../digi_fab/4.html">最終課題</a></li>
     </ul>
 
