--- a/de34/1.html
+++ b/de34/1.html
@@ -22,7 +22,7 @@
     ↓<br>
     IFの観点では人を感知したら速度が速くなったりする。神大のエレベーターはエコのために人がいないときは速度が遅くなる。<br>
     <li>プログラミングでできそうな事</li>
-    自動で靴ひもを調節してくれえる靴
+    自動で靴ひもを調節してくれる靴
     <img src="./images/IMG_8893.jpg">
 </ul>
 
