--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <!--番号付きのリスト-->
         <ol>
             <li><a href="./de12/index.html">デザイン演習Ⅰ・Ⅱ</a></li>
+            <li><a href="./de34/index.html">デザイン演習Ⅲ・Ⅳ</a></li>
             <li><a href="./digi_fab/index.html">デジタルファブリケーション</a></li>
         </ol>
 
