--- a/de34/1.html
+++ b/de34/1.html
@@ -20,10 +20,10 @@
     ↓<br>
     ループの観点では、いつも動いてはいる。<br>
     ↓<br>
-    IFの観点では人を感知したら速度が速くなったりする。神大のエレベーターはエコのために人がいないときは速度が遅くなる。<br>
+    IFの観点では人を感知したら速度が速くなったりする<br>
     <li>プログラミングでできそうな事</li>
-    自動で靴ひもを調節してくれる靴
-    <img src="./images/IMG_8893.jpg">
+    自動で靴ひもを調節してくれる靴<br>
+    <img src="./images/IMG_8893.jpg" width="30%">
 </ul>
 
 </div>
