--- a/de34/2.html
+++ b/de34/2.html
@@ -14,6 +14,20 @@
          <!-- ①↓に文字を書いてみよう -->
 <center><h2>IOT動画</h2></center>
 <center><a href="https://www.youtube.com/shorts/9rWtbCgpELQ">動画</a></center>
+<ul>
+    <center><img src="./images/IMG_8894.jpg" width="50%"></center>
+    <li><h4>靴</h4></li>
+    自動で靴ひもを調節してくれる靴<br>
+    ↓<br>
+    はいた後形態の操作で絞め具合を調整できたりする<br>
+    ↓<br>
+    手間が省ける<br>
+    <li>プログラミングでできそうな事</li>
+    前回の課題でも提出した自動で靴ひもを調節してくれる靴<br>
+    <img src="./images/IMG_8893.jpg" width="30%"><br>
+    前回は履いたら足を感知して、自動で調整というのも考えていたが<br>
+    今回の授業ではIOTの観点を取り入れて携帯の操作が実現性が高く当てはまる。
+</ul>
 
 </div>
 
