--- a/de34/index.html
+++ b/de34/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="./1.html">第１回</a></li>
             <li><a href="./2.html">第２回</a></li>
+            <li><a href="./2.html">第３回</a></li>
         </ul>
 
 <br>
