--- a/de34/6.html
+++ b/de34/6.html
@@ -11,26 +11,29 @@
     <center><h1>Project note</h1></center>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
 <div>
-<h3>メンバー</h3>
-<a href="https://aruku0155.github.io/xbp/" target="_blank">aruku</a>
-<h3>アイデアのスケッチ</h3>
+<h2>Member</h2>
+<div class="textlink textlink03"><a href="https://aruku0155.github.io/xbp/" target="_blank">aruku</a></div>
+
+<h2>Idea Sketch</h2>
 <img src="./images/IMG_9149.jpg" width="40%">
-<h3>概要</h3>
+<h2>Overview</h2>
 <p>色々な悩みを持った人が使うコインランドリー<br>
-    「家に洗濯機がない、時間がない、大量の服を洗濯したい<br>
-    　　　　　　　　　　　　　　　　　　　　　 …けどお金がかかる」<br>
-    そんな悩みをサービスに変える、『サブスクコインランドリー』を計画します。<br></p>
+    「家に洗濯機がない、時間がない、大量の服を洗濯したい……けどお金がかかる」<br>
+    そんな悩みをサービスに変える、『サブスクコインランドリー』を計画します。<br>
+    <br>
+    そして何より根底にあるのが課題のための取り組みではなく自分たちのためになる取り組みを行っていきたい。<br></p>
 
-<h3>全体の大まかな流れ</h3>
+<h2>Main Flow</h2>
 <img src="./images/スクリーンショット 2024-06-02 131455.png" width="50%">
+<p>基本的にアポ取りや調査が大変になってくると思われるが頑張る</p>
 
-
-<h3>プロセスメモ</h3>
-■は考えないといけないこと疑問等<br>
+<h2>Process Memo</h2>
+<p>■は考えないといけないこと疑問等<br>
 ●は具体的にやること<br>
 →はやったこと<br>
 <br>
 ■IOTをどこに入れるか<br>
+→実験店舗の乾燥機がIOTを導入できるか聞き込みが必要で対応できるか否かでIOT要素をどこで入れるかを考える。6/2<br>
 ■店側との交渉<br>
 ■料金設定<br>
 →今回は形に残すことが目標なので利益はあまり考えていない 5/31<br>
@@ -40,8 +43,11 @@
 ■<br>
 ●<br>
 
-
-<h3>使用したモノ</h3>
-<h3>紹介動画</h3>
+</p>
+<h2>Used Things</h2>
+    <li>
+        <ul></ul>
+    </li>
+<h2>Introducing Video</h2>
 </body>
 </html>
