--- a/de34/6.html
+++ b/de34/6.html
@@ -14,7 +14,7 @@
 <h2>Member</h2>
 <div class="textlink textlink03"><a href="https://aruku0155.github.io/xbp/" target="_blank">aruku</a></div>
 
-<h2>Idea Sketch</h2>
+<h2>Sketch of Idea</h2>
 <img src="./images/IMG_9149.jpg" width="40%">
 <h2>Overview</h2>
 <p>色々な悩みを持った人が使うコインランドリー<br>
