--- a/de34/index.html
+++ b/de34/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>XBP_HPsample</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../de12/css/style.css">
     <link rel="shortcut icon" href="./images/xbp.ico">
 </head>
 <body>
     <logotohome>
-    <a href="../index.html"><img src="./images/0_XBlogo.png" alt=""></a>
+    <a href="../index.html"><img src="../images/0_XBlogo.png" alt=""></a>
     </logotohome>
     <h1>デザイン演習Ⅲ・Ⅳ</h1>
         <h2>演習ノート一覧</h2>
