--- a/de34/6.html
+++ b/de34/6.html
@@ -38,7 +38,11 @@
 ■料金設定<br>
 →今回は形に残すことが目標なので利益はあまり考えていない 5/31<br>
 ●アンケート<br>
+→桜木町で声をかけてアンケートを行おうとしたがほとんど断られた。6/3<br>
+→神大生にフォームでアンケートを実施。6/3<br>
 ●フィールドワーク<br>
+→実際に戸部のコインランドリーを見に行ったが無人だった。6/3<br>
+→料金は相場通りの値段だった。6/3<br>
 ●コインランドリー側の変動費<br>
 ■<br>
 ●<br>
