--- a/de34/6.html
+++ b/de34/6.html
@@ -35,24 +35,32 @@
 ■IOTをどこに入れるか<br>
 →実験店舗の乾燥機がIOTを導入できるか聞き込みが必要で対応できるか否かでIOT要素をどこで入れるかを考える。6/2<br>
 ■店側との交渉<br>
+→アポ取りに約２週間、試用期間に２週間を計画していたが協力してくれる店舗が見つからなかった。<br>
+→時間がないので路線を少し変更して店舗さえあれば出来るようなシステムを作る。<br>
 ■料金設定<br>
 →今回は形に残すことが目標なので利益はあまり考えていない 5/31<br>
 ●アンケート<br>
 →桜木町で声をかけてアンケートを行おうとしたがほとんど断られた。6/3<br>
 →神大生にフォームでアンケートを実施。6/3<br>
+　→自分たちが想定していなかった結果が取れた。6/5<br>
 ●フィールドワーク<br>
 →実際に戸部のコインランドリーを見に行ったが無人だった。6/3<br>
 →料金は相場通りの値段だった。6/3<br>
 ●コインランドリー側の変動費<br>
-■<br>
-●<br>
+■ファブラボの利用<br>
+→レーザーカッターで会員カードを作る<br>
+●パワポ作り<br>
+→完成
 
 </p>
 <h2>Used Things</h2>
     <ul>
-        <li></li>
-        <li></li>
+        <li>レーザーカッター</li>
+        <li>家の近くのコインランドリー店舗</li>
     </ul>
 <h2>Introducing Video</h2>
+<div class="video">
+    <iframe width="391" height="691" src="https://www.youtube.com/embed/LGpij8nrbyg" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
 </body>
 </html>
