--- a/de34/6.html
+++ b/de34/6.html
@@ -62,5 +62,8 @@
 <div class="video">
     <iframe width="391" height="691" src="https://www.youtube.com/embed/LGpij8nrbyg" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
+<p>～班の発表PDF～<br>
+    <a href="./files/xbp最終課題.pdf" target="_blank">pdfファイル</a>
+</p>
 </body>
 </html>
