--- a/de56/index.html
+++ b/de56/index.html
@@ -10,7 +10,7 @@
     <logotohome>
     <a href="../index.html"><img src="../images/0_XBlogo.png" alt=""></a>
     </logotohome>
-    <h1>デザイン演習Ⅴ ＆ 専門入門演習</h1>
+    <h1>デザイン演習Ⅴ & 専門入門演習</h1>
         <h2>演習ノート一覧</h2>
         <ul>
             <li><a href="./1.html">授業前課題</a></li>
