--- a/de56/2.html
+++ b/de56/2.html
@@ -8,13 +8,14 @@
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
-    <center><h1>デザイン演習第1回</h1></center>
+    <center><h1>デザイン演習第2回</h1></center>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
 <div>
          <!-- ①↓に文字を書いてみよう -->
-    <center><h2>世の中に存在する課題</h2></center>
-    <center><img src="./images/WIN_20240922_18_37_35_Pro.jpg" width="40%"></center>
-    <p>学校間同士の部活動の練習試合などで必要とする業務を斡旋してあげれば教師の業務負担の改善になると思う。</p>
+    <center><h2>ビジネスモデル図解</h2>
+    <img src="./images/スクリーンショット 2024-09-30 193806.png" width="50%">
+    <h2>ビジネスモデルキャンバス</h2>
+    <img src="./images/スクリーンショット 2024-09-30 194148.png" width="50%"></center>
      
 </div>
 
