--- a/de56/index.html
+++ b/de56/index.html
@@ -14,7 +14,7 @@
         <h2>演習ノート一覧</h2>
         <ul>
             <li><a href="./1.html">授業前課題</a></li>
-            <li><a href=""></a></li>
+            <li><a href="./2.html">第２回</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
