--- a/de56/index.html
+++ b/de56/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="./1.html">授業前課題</a></li>
             <li><a href="./2.html">第２回</a></li>
-            <li><a href=""></a></li>
+            <li><a href="./3.html">第３回</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
         </ul>
